<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AldatuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="583dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="196dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etLenguaiaIzena"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/izena" />

        <EditText
            android:id="@+id/etLenguaiaDeskribapena"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:hint="@string/deskripzioa" />

        <Spinner
            android:id="@+id/spinnerLenguaia"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btnGorde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gorde" />

        <Button
            android:id="@+id/btnAtzera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itzuli" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>