<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GehituFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonGehitu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/gehitu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.08" />

        <Button
            android:id="@+id/buttonItzuli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="176dp"
            android:text="@string/itzuli"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toEndOf="@+id/buttonGehitu"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.327" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="407dp"
            android:layout_height="313dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="2dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="139dp">

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="344dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/izena"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />

            <EditText
                android:id="@+id/editTextDescripcion"
                android:layout_width="344dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/deskripzioa"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />

            <Spinner
                android:id="@+id/spinnerLibre"
                android:layout_width="344dp"
                android:layout_height="48dp"
                android:background="#FF0000"
                android:backgroundTint="#D0A2FF"
                android:hint="Estado" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>